Save/Update files [ci skip]

--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -50,9 +50,9 @@
  ambrosian_republic_resolved_tt:0 "§Yミラノ政府はじきに安定するだろう§!"
  ambrosian_republic_disaster_resolved_tt:0 "ミラノ政府は安定した"
  signoria_reform:0 "シニョリーア制"
- signoria_reform_desc:0 "事実上、共和国はある政治家の一族に支配されている。だが、優れた統治者である彼らの手で国政はきわめて円滑に行われている。君主制と大差がないという言説もあるが、そうした言説は何の意味も持たない。"
+ signoria_reform_desc:0 "共和国はある政治家の一族に支配されているが、優れた統治者である彼らの手によって国政はきわめて円滑に行われている。君主制と大差がないという言説もあるが、そうした言説は何の意味も持たない。"
  signoria:0 "シニョリーア制"
- signoria_desc:0 "事実上、共和国はある政治家の一族に支配されている。だが、優れた統治者である彼らの手で国政はきわめて円滑に行われている。君主制と大差がないという言説もあるが、そうした言説は何の意味も持たない。"
+ signoria_desc:0 "共和国はある政治家の一族に支配されているが、優れた統治者である彼らの手によって国政はきわめて円滑に行われている。君主制と大差がないという言説もあるが、そうした言説は何の意味も持たない。"
  savonarola_dead_tt:0 "サヴォナローラが[Root.GetName]の支配者ではない"
  had_disaster_for_6_months:0 "国難は6ヵ月間有効です。"
  bonfire_of_the_vanities_disaster:0 "虚栄の焼却"
@@ -92,13 +92,13 @@
  end_gpw_tt:0 "§Y大農民戦争が終結します。§!"
  king_in_prussia.1.t:0 "プロイセンの王冠"
  king_in_prussia.1.d:0 "偉大なる我らの国がさらなる高みへと昇りつめようとしている中で、[Root.Monarch.GetTitle]は、プロイセンを王国に昇格させ、自身がその王に即位しようとしていることを明らかにした。だが帝国諸侯は、こうした問題が発生したとき、皇帝の裁可を仰がねばならない。彼は皇帝に対し、この問題について慎重に判断するよう要請した。"
- king_in_prussia.1.a:0 "我々は王になるのだ！"
- king_in_prussia.2.t:0 "プロイセンの王"
+ king_in_prussia.1.a:0 "我々は王になるぞ！"
+ king_in_prussia.2.t:0 "プロイセンにおける王"
  king_in_prussia.2.d:1 "新興国家プロイセンは帝国内での影響力を増し、今や国際政治の舞台でも強国としての地位を確固たるものとしている。 そうした中、[PRU.Monarch.GetTitle][PRU.Monarch.GetName]はプロイセン王国を創設し、国の地位を[PRU.GovernmentName]から引き上げると宣言した。しかしこれは神聖ローマ帝国内ではほぼ前例のないことである。この問題をどう処理するか、皇帝に決断が迫られている。"
  king_in_prussia.2.a:0 "プロイセンを王国に昇格させよう。"
  king_in_prussia.2.b:0 "プロイセン国内に限って、王号を用いることを認めよう。"
  king_in_prussia.2.c:0 "こんなことを認めるわけにはいかない！"
- king_in_prussia.3.t:0 "プロイセンの王"
+ king_in_prussia.3.t:0 "プロイセンにおける王"
  king_in_prussia.3.d:0 "我らの親友にして盟友、皇帝[emperor.Monarch.GetName]陛下は、プロイセンを王国に昇格させることを快諾して下さった。このような特権が与えられたのは、ボヘミアの台頭以来初めてのことだ。これからのプロイセン王は自らの王冠に対し誇りを持ち、皇帝からの恩義を常に忘れないようにすることだろう！"
  king_in_prussia.3.d2:0 "帝国では伝統的に、帝国内における王はローマ王すなわち皇帝と、ボヘミア王のみとされている。だが、交渉の末皇帝は妥協し、我々に対し「プロイセンにおける王」の称号の使用を認めた。プロイセンは神聖ローマ帝国の領域外にあるため、そこでは帝国の伝統を破ることなく、王号を用いることができる、というわけだ。"
  king_in_prussia.3.d3:0 "恥知らずの悪党である皇帝は、我々が合理的な妥協案を示したにも関わらず、我々が王号を用いることを認めなかった。だがそのようなことを気にする必要はない。これ以後、我々は王と名乗るだろう。"
@@ -111,7 +111,7 @@
  emp_mission_events.10.t:0 "アランソン公"
  emp_mission_events.10.d:0 "百年戦争中、アランソン公はイングランド軍の侵攻により自らの領土を追われた。公国の伝統的な領土がフランスの手に戻った今、ヴァロワ=アランソン家の生き残った貴族たちは、[Root.Monarch.GetTitle]に対し、失われた領土と称号の回復を求めている。"
  emp_mission_events.10.a:0 "アランソンを返還しよう。"
- emp_mission_events.10.b:0 "以後、アランソンは王領とする。"
+ emp_mission_events.10.b:0 "以後、アランソンは王領としよう。"
  EST_VAL_DUKE_OF_ALENCON:0 "アランソン公爵：§Y$VAL$%§!"
  admiralty_reform:0 "海軍本部委員会"
  admiralty_reform_desc:0 "我々の盛衰の如何は海上で力を発揮できるかどうかにかかっている。そのため、我々は政府の手綱を海軍本部委員会に引き渡した。彼らは経験豊富で愛国心に溢れていて、非の打ちどころがない。\n\n選挙を無効にします。"
@@ -218,7 +218,7 @@
  flavor_ara.EVTNAME10:0 "ナポリが協定を順守"
  flavor_ara.EVTDESC10:0 "新たなナポリ王、[NAP.Monarch.GetName]は我々と彼の父親との間で結ばれた協定に従い、教会への勤めを果たしている。"
  flavor_ara.EVTOPTA10:0 "立場をわきまえた王に会えるのは嬉しいものだ！"
- flavor_ara.EVTNAME11:0 "ナポリ継承への議論"
+ flavor_ara.EVTNAME11:0 "ナポリ王位継承問題"
  flavor_ara.EVTDESC11:0 "アルフォンソ5世はその死に際し、王国を2つに分割した。ナポリ王位を庶子のフェルディナンドに譲ったのだ。しかし当時ですら問題となっていたこの決定は、今ではさらに重大な問題となっている。果たして、フェルディナンドによる継承は正当なものだったのだろうか？"
  flavor_ara.EVTOPTA11:0 "ナポリは[Root.GetName]の領土だ！"
  flavor_ara.EVTOPTB11:0 "ナポリの独立を認めよう。"
@@ -244,32 +244,32 @@
  has_completed_all_reforms_trigger_tooltip:0 "すべての政府改革を完了している。"
  has_been_insulted_by_root:1 "§Y[Root.GetName]§!から侮辱されている"
  new_flavour_bav.12.t:0 "インゴルシュタット：ビールの街？"
- new_flavour_bav.12.d:0 "インゴルシュタットとその周辺地域では、伝統的にワインを生産してきた。しかし、ビールが好まれ始めたバイエルンの他の地域の傾向に続く形で、都市にはますます多くの醸造所が設立されている。もし我々が望むなら、これら初期の醸造所に支援を与え、ビールが州の主な輸出品としてワインに取って代わることを許すこともできる。"
+ new_flavour_bav.12.d:0 "インゴルシュタットでは、伝統的にワインの醸造が行われてきた。しかし、バイエルンの他の地域ではビールが主流となりつつあり、市内各地に醸造所が建設され始めている。こうした醸造所を支援すれば、ワインに代わってビールを新たな輸出品とすることもできるだろう。"
  new_flavour_bav.12.a:0 "ビールには未来がある。"
  new_flavour_bav.12.b:0 "ワインこそが優れた飲み物だ。"
  ingolstadt_beer_city:0 "インゴルシュタットの醸造所"
- desc_ingolstadt_beer_city:0 "インゴルシュタットとその周辺には数多くの有名な醸造所が作られ、街をバイエルンのビール醸造の主要な中心地の1つにしている。"
+ desc_ingolstadt_beer_city:0 "インゴルシュタットでは各地に優れた醸造所が建設され、今ではバイエルンでも有数のビールの産地となっている。"
  new_flavour_bav.13.name:0 "バイエルンの継承"
- new_flavour_bav.13.desc:0 "ヴィッテルスバッハ家が治めるバイエルン公国は、14世紀半ば以降様々な形で分割されてきた。現在、公国はミュンヘン、ランツフート、インゴルシュタットの三つの分家に分かれている。男子後継者を残さないまま亡くなった公爵の土地をどの分家が相続するかは、様々な複雑な取り決めによって定められている。しかし、これらの取り決めによって常に論争を抑え込めるというわけではないし、また強大な公爵は自らの主張が完全に正当であるかどうかに関わらず、親族の土地によって自らの力を増大させようとすることもあるだろう。"
+ new_flavour_bav.13.desc:0 "14世紀以降、ヴィッテルスバッハ家の治めるバイエルン公国は幾度となく分割されてきた。現在では公国は3つの家に分かれている。ミュンヘン、ランツフート、インゴルシュタットの3つだ。いずれかの家系が断絶した際には、複数の取り決めに基づき、その家の領地は相続される。しかし、それでも領地の相続に異議を唱える者がしばしば現れる。さらに、強大な公爵は、正当な継承権を持たない時でさえ、親族の領地を奪い自家の勢力を拡大しようとすることがある。"
  new_flavour_bav.13.opt:0 "これでバイエルンにも統一が取り戻されるだろう。"
  new_flavour_bav.14.name:0 "ルートヴィヒ8世の死"
  new_flavour_bav.14.desc:0 "後継者のいない、ヴィッテルスバッハ家のインゴルシュタット公ルートヴィヒ8世が死去した。ヴィッテルスバッハ一族の取り決めに従い、インゴルシュタット公国は今、[Root.Monarch.GetTitle][Root.Monarch.GetName]のものとなっている。"
  new_flavour_bav.14.opt:0 "素晴らしい。"
  new_flavour_bav.15.name:0 "ルートヴィヒ8世の死"
  new_flavour_bav.15.desc:0 "我らが公爵、ルートヴィヒ8世は領土を継承する後継者がいないまま死去した。ヴィッテルスバッハ一族の取り決めに従い、インゴルシュタット公国は今、ランツフートの[LBV.Monarch.GetTitle][LBV.Monarch.GetName]のものとなっている。"
- new_flavour_bav.15.opt:0 "残念なことだ。"
+ new_flavour_bav.15.opt:0 "残念だ。"
  new_flavour_bav.16.name:0 "ルートヴィヒ8世の死"
  new_flavour_bav.16.desc:0 "後継者のいない、ヴィッテルスバッハ家のインゴルシュタット公ルートヴィヒ8世が死去した。ヴィッテルスバッハ一族の取り決めに従い、インゴルシュタット公国は今、ランツフートの[LBV.Monarch.GetTitle][LBV.Monarch.GetName]のものとなっている。"
  new_flavour_bav.16.opt:1 "ランツフートの請求権を主張しよう。"
  new_flavour_bav.17.name:0 "ルートヴィヒ7世の請求権"
- new_flavour_bav.17.desc:1 "インゴルシュタットのルートヴィヒ8世の死に伴って、ランツフートの[LBV.Monarch.GetTitle][LBV.Monarch.GetName]がインゴルシュタットの領土を請求した。しかし、それは数年前に息子によって彼の土地を追われ、以来アンスバッハの[Root.Monarch.GetTitle][Root.Monarch.GetName]の下で投獄されていたルートヴィヒ7世の請求権を無視するものであった。彼の息子の死を聞いたルートヴィヒ7世は、彼のかつての公国を取り戻す考えを口にしている。これは我々にとって、何らかの利益を得るチャンスかもしれない。"
- new_flavour_bav.17.A:0 "バイエルンの敵にルートヴィヒを売る。"
+ new_flavour_bav.17.desc:1 "インゴルシュタット公ルートヴィヒ8世の死を受けて、ランツフート公[LBV.Monarch.GetTitle][LBV.Monarch.GetName]がインゴルシュタットの領地を請求した。しかし、それは数年前に息子によって領地を追われ、以来アンスバッハの[Root.Monarch.GetTitle][Root.Monarch.GetName]の下で投獄されていたルートヴィヒ7世の請求権を無視するものであった。息子の死の報を聞いたルートヴィヒ7世は、かつての公国を取り戻す考えを口にしている。これは我々にとって、何らかの利益を得られる好機かもしれない。"
+ new_flavour_bav.17.A:0 "ルートヴィヒはもう用済みだ。"
  new_flavour_bav.17.B:0 "彼の請求権を支持しよう。"
- new_flavour_bav.17.C:0 "彼から公国の権利を購入する。"
- new_flavour_bav.171.name:0 "アンスバッハが公国の相続権を購入"
- new_flavour_bav.171.desc:1 "インゴルシュタットの請求権を持つのは我々だけではない。それどころか、ルートヴィヒ8世の父、ルートヴィヒ7世の請求権の方が我々より遥かに強い。だが、彼はアンスバッハの[From.Monarch.GetTitle][From.Monarch.GetName]によってここ数年投獄されたままだ。今、[From.GetAdjective][From.Monarch.GetTitle]はその優れた交渉術(というより財力)をもって、ルートヴィヒからヴィッテルスバッハ家の相続権を買い取ろうとしている。"
- new_flavour_bav.171.A:0 "公国は我々のものだ！"
- new_flavour_bav.18.name:0 "[Root.Monarch.GetTitle][Root.Monarch.GetName]の宗教的使命"
+ new_flavour_bav.17.C:0 "彼から公国の継承権を購入しよう。"
+ new_flavour_bav.171.name:0 "アンスバッハが公国の継承権を購入"
+ new_flavour_bav.171.desc:1 "インゴルシュタットの請求権を持つのは我々だけではない。それどころか、ルートヴィヒ8世の父、ルートヴィヒ7世の請求権の方が我々より遥かに強い。だが、彼はアンスバッハの[From.Monarch.GetTitle][From.Monarch.GetName]によってここ数年投獄されたままだ。今、[From.GetAdjective][From.Monarch.GetTitle]はその優れた交渉術(それと財力)をもって、ルートヴィヒからヴィッテルスバッハ家の相続権を買い取ろうとしている。"
+ new_flavour_bav.171.A:0 "公国は我らのものだ！"
+ new_flavour_bav.18.name:0 "[Root.Monarch.GetTitle][Root.Monarch.GetName]の異端禁止令"
  new_flavour_bav.18.desc:0 "プロテスタントの急速な広がりは[Root.Monarch.GetTitle][Root.Monarch.GetName]に仕えている、カトリック教徒の家臣たちをも驚かせている。そこで、彼らは領内での新教の勢力拡大を防ぐため、異端勢力による説教を禁止し、さらに領内の聖職者、領民が異端を信仰することを禁止するための法案を作成した。法案には、領内での信仰を監視するための委員会の設置が行われるとされ、さらに[Root.Monarch.GetTitle]の許可を得ない出版物の発行や、典礼方式の変更といったことを禁止する、ともされている。これほど厳しい規則は聖職者たちの反発を招くだろうが、それでも異端の阻止には効果的だろう。"
  new_flavour_bav.18.a:0 "法を制定せよ。"
  new_flavour_bav.18.b:0 "聖職者の自由は守られねばならない…"
@@ -280,7 +280,7 @@
  new_flavour_bav.20.desc:1 "[Root.Consort.GetTitle][Root.Consort.GetName]は[Root.Monarch.GetTitle][Root.Monarch.GetName]に対し、もし嫡子が生まれたなら、テアチン会のため、[Root.Capital.GetCapitalName]に壮麗な教会を建設してほしい、と伝えている。また、彼女はアゴスティーノ・バレッリというボローニャの建築家に依頼して、バロック式の教会を建設してほしい、とも伝えている。さらに、彼女はこの話を領民たちにも広めており、イタリア文化を愛好する領内の貴族や富裕な市民たちがこの計画に賛同している。さて、どうしたものだろうか？"
  new_flavour_bav.20.a:0 "承知した。彼女が望むように。"
  new_flavour_bav.20.b:0 "たわごとだ！"
- bav_religious_mandate_mod:0 "宗教的使命"
+ bav_religious_mandate_mod:0 "異端禁止令"
  desc_bav_religious_mandate_mod:0 "我々は、領内で行われる典礼の方式について厳格な規則を定めた。"
  bav_building_wife_church:0 "結婚の喜び"
  desc_bav_building_wife_church:0 "妻の言いなりになって教会を建てることほど、「愛しています」と言える方法は無い。"
@@ -290,36 +290,36 @@
  new_flavour_bav.27.desc:1 "[bavarian_lesser_union_member.GetName]の貴族たちは、デンマークによる支配に反発している。彼らは、再び自分たちがこの地を支配できる日が来ることを待ち望んでいるのだ。\n\nここ数か月、かの地で何らかの陰謀がめぐらされているという噂はあったのだが、我々はその現場を押さえることができずにいた。しかし、噂は真実だった。結集した反乱貴族たちはヴィッテルスバッハ家の遠縁にあたるマクシミリアンを公爵として、挙兵したのである。"
  new_flavour_bav.27.A:0 "何としてもこの反乱を鎮圧しなければ！"
  new_flavour_bav.21.name:0 "皇帝への債務"
- new_flavour_bav.21.desc:0 "過去数十年にわたって、レーゲンスブルクの都市は[HAB.Monarch.Dynasty.GetName]の神聖ローマ皇帝に対して多くの債務を積み重ねてきた。[HAB.Monarch.GetSheHe]は[HAB.Monarch.GetHerHis]の債務についてまだ何も言ってはいないが、[HAB.Monarch.GetSheHe]がいつでもそれを回収することができるという事実により、我々の立場はかなり弱められている。"
- new_flavour_bav.21.A:0 "今支払うべきだ。"
- new_flavour_bav.21.B:0 "借金の督促が来るまで待とう。"
+ new_flavour_bav.21.desc:0 "過去数十年間、レーゲンスブルク市は[HAB.Monarch.Dynasty.GetName]家に対し多額の債務を積み重ねてきた。支払い要求は未だなされていないが、この事実によりレーゲンスブルクの立場は弱いものとなっている。"
+ new_flavour_bav.21.A:0 "今すぐ返済しよう。"
+ new_flavour_bav.21.B:0 "督促が来るまで待とう。"
  new_flavour_bav.22.name:0 "レーゲンスブルクの債務"
- new_flavour_bav.22.desc:0 "[emperors_enemy.GetUsableName]との現在の戦争は、財政に大きな負担をかけている。我々の顧問は、レーゲンスブルクの都市が我々に多額の借金をしていることを指摘している。彼らは、我々の不満と共に彼らに脅しをかけることで、都市が支払いをするよう説得できると確信している。しかし、そのような多額の金を要求すれば、都市は不安定になり、都市とのつながりが強いヴィッテルスバッハ家が代理として仲裁に入る可能性もある。"
- new_flavour_bav.22.A:0 "彼らは債務を支払うべきだ。"
- new_flavour_bav.22.A.tooltip:0 "§Yレーゲンスブルク§!が支払うことができる場合、我々は以下を受け取るでしょう："
- new_flavour_bav.22.B:0 "我々はそれらの経済的違犯を許すだろう。"
+ new_flavour_bav.22.desc:0 "現在行われている[emperors_enemy.GetUsableName]との戦争は、我が国の財政にとって大きな負担となっている。顧問たちはレーゲンスブルクの債務を指摘し、これの返還を迫ることで資金が調達できると言っている。しかし、これほどの額を支払えば、市政は混乱するであろうし、この都市と関係の深いヴィッテルスバッハ家の介入を招くことになるかもしれない。"
+ new_flavour_bav.22.A:0 "支払いを要求しよう。"
+ new_flavour_bav.22.A.tooltip:0 "もし§Yレーゲンスブルク§!が支払いを受け入れた場合、我が国は以下のものを受け取るでしょう："
+ new_flavour_bav.22.B:0 "彼らを許してやろう。"
  new_flavour_bav.23.name:0 "レーゲンスブルクの債務"
- new_flavour_bav.23.desc:0 "過去数十年にわたって、レーゲンスブルクの都市は[HAB.Monarch.Dynasty.GetName]の神聖ローマ皇帝に対して多くの債務を積み重ねてきた。現在、皇帝[HAB.Monarch.GetName]は、[emperors_enemy.GetUsableName]との戦争に資金を供給するために[HAB.Monarch.GetHerHis]の貸付金を回収しようとしている。しかし、レーゲンスブルクとの強いつながりーかつてヴィッテルスバッハの中心地であったーを考えると、我々はこれを仲裁する立場にある。彼らの借金を返済するのに必要な資金を集めることができれば、レーゲンスブルクに彼らの債務を我々に転送するよう提案することは我々の権利の範囲内であり、本質的には、我々は彼らの自由と引き換えに彼らの借金を支払うことを意味する。しかし、オーストリア人はそのような取引についておぼろげに把握しているかもしれない。"
- new_flavour_bav.23.A:0 "我々は都市と引き換えに彼らを救うだろう。"
+ new_flavour_bav.23.desc:0 "過去数十年間、レーゲンスブルク市は皇帝[HAB.Monarch.Dynasty.GetName]家に対し多額の債務を積み重ねてきた。現在皇帝は[emperors_enemy.GetUsableName]との戦争のための戦費調達のため、市に対し返済を迫っている。しかしレーゲンスブルクはかつてヴィッテルスバッハ家の本拠地だった都市であり、我が国との関係はとても深い。彼らの債務を肩代わりすることで、うまくいけば都市の支配権をも獲得できるかもしれない。しかし、この計画はオーストリアに予測されているかもしれない。"
+ new_flavour_bav.23.A:0 "彼らを救ってやろう。ただし対価は都市そのものだ！"
  new_flavour_bav.23.A.tooltip:0 "§Yレーゲンスブルク§!が提案を受け入れた場合、以下の影響が発生するでしょう："
- new_flavour_bav.23.B:0 "彼らは自身でやるだろう。"
+ new_flavour_bav.23.B:0 "勝手にやらせておけ。"
  new_flavour_bav.23.B.tooltip:0 "他の§Yヴィッテルスバッハ家§!の君主が§Yレーゲンスブルク§!への支援を提案するかもしれません。"
- new_flavour_bav.24.name:0 "皇帝の支払い要求"
- new_flavour_bav.24.desc.default:0 "皇帝[HAB.Monarch.GetName]は、[emperors_enemy.GetUsableName]との戦争における戦費を調達するため、[HAB.Monarch.GetHerHis]が過去に貸した資金を回収しようとしている。[HAB.Monarch.GetSheHeCap]は全額の即時支払いを要求している。我々は、自由都市として支払い義務を果たすか、それともデフォルトを宣言するか、どちらか選択しなければならない。"
- new_flavour_bav.24.desc.wittelsbach:0 "皇帝[HAB.Monarch.GetName]は、[emperors_enemy.GetUsableName]との戦争における戦費を調達するため、[HAB.Monarch.GetHerHis]が過去に貸した資金を回収しようとしている。[HAB.Monarch.GetSheHeCap]は全額を即時に支払うよう求め、もし自由都市としての義務を怠ったならば制裁を課す、とまで言っている。しかし、これに対し[From.GetName]の[From.Monarch.GetTitle]は第三の道を提案してきた。[From.Monarch.GetSheHeCap]は都市に対する歴史的なヴィッテルスバッハの主張を認めるならば、我々の借金を肩代わりする、と提案している。"
+ new_flavour_bav.24.name:0 "皇帝が債務の返済を要求"
+ new_flavour_bav.24.desc.default:0 "皇帝[HAB.Monarch.GetName]は、[emperors_enemy.GetUsableName]との戦争における戦費を調達するため、過去の債務の全額を即時に返済するよう要求している。自由都市として支払い義務を果たすか、それともデフォルトを宣言するか、どちらか選択しなくてはならない。"
+ new_flavour_bav.24.desc.wittelsbach:0 "皇帝[HAB.Monarch.GetName]は、[emperors_enemy.GetUsableName]との戦争における戦費を調達するため、過去の債務の全額を即時に返済するよう要求している。さらには、もし自由都市としての義務を怠ったならば制裁を課す、とまで述べている。しかし、これに対し[From.GetName]の[From.Monarch.GetTitle]は第三の道を提案してきた。[From.Monarch.GetSheHeCap]は都市に対する歴史的なヴィッテルスバッハ家の請求権を認めるならば、我々の借金を肩代わりする、と提案している。"
  new_flavour_bav.24.A:0 "いいだろう。直ちに全額返済しよう。"
  new_flavour_bav.24.B:0 "こんな大金、支払えるわけがないだろう。"
- new_flavour_bav.24.B.tooltip:0 "§R皇帝は自由都市である我々の権利を取り消します。レーゲンスブルク司教領が都市の支配を引き継ぐでしょう§!"
- new_flavour_bav.24.C:0 "[From.GetName]の提案を受け入れる。"
- new_flavour_bav.24.C.player_warning_tooltip:0 "§Rレーゲンスブルクは完全に[From.GetName]に併合されます。§!"
- new_flavour_bav.25.name:0 "我々の債務の免除"
+ new_flavour_bav.24.B.tooltip:0 "§R皇帝は自由都市としての権利を取り消します。レーゲンスブルク司教領が都市の支配を引き継ぐでしょう§!"
+ new_flavour_bav.24.C:0 "[From.GetName]の提案を受け入れよう。"
+ new_flavour_bav.24.C.player_warning_tooltip:0 "§Rレーゲンスブルクは[From.GetName]に併合されます。§!"
+ new_flavour_bav.25.name:0 "返済の免除"
  new_flavour_bav.25.desc:0 "我々が皇帝に借金を負ってからかなりの時が経過したが、その間に皇帝と帝国の政策には多くの変化があった。その結果、問題に関する皇帝の見解は穏やかなものとなった。[Root.Monarch.GetTitle][Root.Monarch.GetName]が[HAB.Monarch.GetTitle][HAB.Monarch.GetName]を、我々の債務を支払い可能な水準まで減らし、残りの支払いは免除してくれるよう説得したのだ。"
  new_flavour_bav.25.A:0 "素晴らしい知らせだ。"
- new_flavour_bav.26.name:0 "我々の債務の免除"
- new_flavour_bav.26.desc:0 "[HAB.GetName]の[HAB.Monarch.GetName]、この上なく賢明な[HAB.Monarch.GetWomanMan]は、寛大にも我々の借金を免除すると決定した。過去の借金を支払う必要はなくなったのだ。"
+ new_flavour_bav.26.name:0 "返済の免除"
+ new_flavour_bav.26.desc:0 "この上なく賢明な皇帝[HAB.Monarch.GetName]陛下は、寛大にも我々の債務の支払いを免除してくださった。もう過去の借金を支払う必要はなくなったのだ。"
  new_flavour_bav.26.A:0 "皇帝陛下万歳！"
- opinion_regensburg_paid:0 "債務を支払った"
- opinion_regensburg_no_money:0 "債務を免除した"
+ opinion_regensburg_paid:0 "債務を返済した"
+ opinion_regensburg_no_money:0 "返済を免除した"
  opinion_regensburg_defaulted:0 "債務不履行に陥った"
  opinion_stole_free_city:0 "自由都市を併合した"
  opinion_regensburg_demand_too_much:0 "過度な要求"
@@ -337,19 +337,19 @@
  flavor_sax.7.A:0 "支払うしかないだろう。"
  flavor_sax.7.B:0 "反逆者に支払う金などない！"
  flavor_sax.8.name:0 "ライプツィヒ条約"
- flavor_sax.8.desc:0 "フリードリヒ2世の死に伴い、今度は[Root.Monarch.GetName]と、その兄[Root.Monarch.GetHerHis]の間で、ザクセンの公爵位をめぐり継承問題が発生している。フリードリヒ2世の遺言によれば、エルンストは[Root.Monarch.GetSisterBrother]から独立して、チューリンゲンの支配者となるべき、とされている。しかし、[Root.Monarch.GetName]はエルンストより有利な立場にあり、父の遺言を受け入れることも可能だ。もっとも、[Root.Monarch.GetSheHe]がその結果を受け入れられるならばだが…"
+ flavor_sax.8.desc:0 "フリードリヒ2世の死に伴い、今度は[Root.Monarch.GetName]と、その兄[Root.Monarch.GetHerHis]の間で、ザクセンの公爵位をめぐり継承問題が発生している。フリードリヒ2世の遺言によれば、エルンストは[Root.Monarch.GetSisterBrother]から独立して、チューリンゲンの支配者となるべき、とされている。しかし、[Root.Monarch.GetName]はエルンストより有利な立場にあり、父の遺言を受け入れることも可能だ。もっとも、[Root.Monarch.GetSheHe]がその結果を受け入れたらの話だが…"
  flavor_sax.8.A:0 "遺言に従おう。"
  flavor_sax.8.B:0 "ザクセンを分割するなど論外だ！"
  flavor_sax.9.name:0 "ザクセン選帝侯"
- flavor_sax.9.desc:0 "ザクセンにいる兄弟たちはもう我々の土地に対する支配権を持っていないが、それでも彼らは選帝侯位を持っている。しかし、すでに我々の優位性は示されたし、皇帝も明らかに我々に対し好感を抱いている。今こそが、このような歴史的誤りを正し、我々の一族に選帝侯位を与えるよう皇帝に請願する、絶好の機会だ。"
- flavor_sax.9.desc.emperor:0 "ザクセンにいる兄弟たちはもう我々の土地に対する支配権を持っていないが、それでも彼らは選帝侯位を持っている。しかし、すでに我々の優位性は示されたし、皇帝は我々自身だ。今こそが、このような歴史的誤りを正し、我々の一族が選帝侯となる絶好の機会だ。"
+ flavor_sax.9.desc:0 "ザクセンにいる兄弟たちはもう我々の土地に対する支配権を有していないが、それでも彼らは選帝侯位を有している。しかし、すでに我々の優位性は示されたし、皇帝も明らかに我々に対し好感を抱いている。今こそが、このような歴史的誤りを正し、我々の一族に選帝侯位を与えるよう皇帝に請願する、絶好の機会だ。"
+ flavor_sax.9.desc.emperor:0 "ザクセンにいる兄弟たちはもう我々の土地に対する支配権を有していないが、それでも彼らは選帝侯位を有している。しかし、すでに我々の優位性は示されたし、皇帝は我々自身だ。今こそが、このような歴史的誤りを正し、我々の一族が選帝侯となる絶好の機会だ。"
  flavor_sax.9.A:0 "皇帝陛下に請願しよう！"
  flavor_sax.9.B:0 "選帝侯になるのは我々だ！"
  flavor_sax.9.C:0 "そこまでする価値はあるまい。"
  flavor_sax.11.name:1 "チューリンゲンがザクセン選帝侯位を要求"
  flavor_sax.11.desc:0 "我々の同盟相手であるチューリンゲンは、ヴェッティン家の闘争で優位を占め、現在はザクセンを支配している。彼らは古い間違いを正し、ザクセンがこれまで保持してきた選帝侯位を彼らに移すよう要求している。"
  flavor_sax.11.A:0 "[From.GetUsableName]選帝侯万歳！"
- flavor_sax.11.B:0 "選帝侯位はザクセンに留まるべきだ。"
+ flavor_sax.11.B:0 "彼らに選帝侯位を与えるべきではないだろう。"
  sax_grieving_death_of_sons:0 "悲しみの中で"
  desc_sax_grieving_death_of_sons:0 "彼は後継者を得るための時が刻々と過ぎていることは理解しているが、彼の最愛の息子の喪失は、フリードリヒを愛情のさらなる絡み合いに引き込まれることに対して消極的にしている。"
  sax_really_bad_reputation:0 "不名誉"
@@ -1233,7 +1233,7 @@
  tri_prum_abbey_desc:0 "プリュムはカロリング家贔屓の修道院であり、小ピピン王が修道院創設者の孫娘である小ベルトレドと結婚した後、小ピピン王より多くの特権と大きな地所を与えられた。長い年月を経て、それは美しい修道院になっただけでなく、聖職者の学習の中心にもなった。しかし、当時よりかなり衰退しており、自力での生き残りは不可能である。修道院の管理を引き継ぎ、以前の栄光を取り戻そう！"
  tri_domkapitel:0 "司教座聖堂参事会の影響"
  tri_domkapitel_desc:0 "司教座参事会または聖堂参事会は、大司教に大きな影響力を持ち、新しい大司教を選び、大司教が各階級をいつ招致するかを決定し、大司教がいない場合には代わりに裁定を行う。大司教がいようがいまいが、彼らの監視を通して、トリーアが常によく管理されていることが分かるだろう。"
- new_flavour_bav.181.name:0 "宗教的使命が期限切れに"
+ new_flavour_bav.181.name:0 "異端禁止令の廃止"
  new_flavour_bav.181.desc:0 "過去数年間、我々は我々の土地での異端の拡大を防ぐため、宗教的使命を定めてきた。これは成功を収め、我々は信仰に妥協することなく、いわゆる宗教改革を乗り越えた。カトリックへの脅威が風化した今、使命は終了し、我々が聖職者に課した制限が解除される時が来た。"
  new_flavour_bav.181.A:0 "結構。"
  new_flavour_bav.20.a.tooltip:0 "\n後継者が生まれた場合："
