--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -3837,12 +3837,12 @@
  UNIONWEMASTER_SETUP:0 "我々が同君連合の上位国となったとき"
  UNIONWEMASTER_HEADER:0 "$MESSENGER$"
  UNIONWEMASTER_1:0 "同君連合！"
- UNIONWEMASTER_2:0 "$MONARCHTITLE$、我々は"
+ UNIONWEMASTER_2:0 "$MONARCHTITLE$、我々は以下の国と同君連合を結びました。"
  UNIONWEMASTER_3:0 "$INHERITED$"
- UNIONWEMASTER_4:0 "彼らは我々に国家を統治させてくれる完全な忠誠を誓いました。"
- UNIONWEMASTER_5:0 "これがもたらすのは良いものだけです。"
+ UNIONWEMASTER_4:0 "彼らは完全な忠誠を誓い、両国を一体として統治することを認めました。"
+ UNIONWEMASTER_5:0 "これがもたらすのは良いこと尽くめでしょう。"
  UNIONWEMASTER_6:0 "両国は今、我が栄光の$ACTUALMONARCHTITLE$によって統治されています。"
- UNIONWEMASTER_LOG:0 "$INHERITED$は今、我が支配下の同君連合にいます。"
+ UNIONWEMASTER_LOG:0 "$INHERITED$は今、同君連合のもとで我らに従属しています。"
  UNIONWEMASTER_BTN1:0 "OK"
  UNIONWEMASTER_BTN2:0 "OK"
  UNIONWEMASTER_BTN3:0 "移動"
@@ -4441,11 +4441,11 @@
  NEWFACTION_TITLE:0 "派閥が権力を得た"
  NEWFACTION_SETUP:0 "新しい派閥が我が国で権力を獲得したとき"
  NEWFACTION_HEADER:0 "$MESSENGER$"
- NEWFACTION_1:0 "派閥が継承した！"
+ NEWFACTION_1:0 "派閥が政権を奪取！"
  NEWFACTION_2:0 "$MONARCHTITLE$、"
- NEWFACTION_3:0 "§Y$FACTION$§Wは"
- NEWFACTION_4:0 "我が国で支配的な地位を得ています。"
- NEWFACTION_5:0 "これは政体の変更を意味します："
+ NEWFACTION_3:0 "§Y$FACTION$§Wが"
+ NEWFACTION_4:0 "我が国での支配的な地位を得ることになりました。"
+ NEWFACTION_5:0 "これは政策の変更を意味します："
  NEWFACTION_6:0 "$VALUES$"
  NEWFACTION_LOG:0 "$FACTION$は権力を得ました！"
  NEWFACTION_BTN1:0 "OK"
