Save/Update files [ci skip]

--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -17,7 +17,7 @@
  MODIFIER_MAX_ABSOLUTISM:0 "最大絶対主義"
  MODIFIER_CORE_DECAY_ON_YOUR_OWN:0 "外国中核州期間"
  MODIFIER_HARSH_TREATMENT_COST:0 "過酷な処置コスト"
- MODIFIER_AUTONOMY_CHANGE_TIME:0 "自治率変更が可能になる時間"
+ MODIFIER_AUTONOMY_CHANGE_TIME:0 "自治率変更のクールダウン"
  MODIFIER_RIVAL_CHANGE_COST:0 "ライバルの変更コスト"
  MODIFIER_RIVAL_BORDER_FORT_MAINTENANCE:0 "ライバルとの国境にある要塞の維持費"
  MODIFIER_UNJUSTIFIED_DEMANDS:0 "不当な請求"
