Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -112,8 +112,8 @@
  RUSABIL_POOL:1 "\n我々は最大$MAX|Y$まで、毎年§G+$GAIN$§!の$NAME|Y$を得ます。"
  NEED_VALUE:0 "「$NAME|Y$」のために$NEED|Y$の$WHAT|Y$を集める必要がありますが、あなたは$AVAILABLE|R$しか集めていません。\n"
  GOV_INTERACTION_COST:0 "$NAME|Y$に$COST|Y$を費やします。\n\n"
- GOV_INTERACTION_GLOBAL_MODIFIER:0 "$YEARS|Y$年の間、以下を取得します：\n$MODIFIER$\n"
- GOV_INTERACTION_CAPITAL_AREA_MODIFIER:0 "$YEARS|Y$年の間、あなたの首都のある地域の州は以下を得ます：\n$MODIFIER$\n"
+ GOV_INTERACTION_GLOBAL_MODIFIER:0 "$YEARS|Y$年間、以下を得ます：\n$MODIFIER$\n"
+ GOV_INTERACTION_CAPITAL_AREA_MODIFIER:0 "$YEARS|Y$年間、首都州は以下を得ます：\n$MODIFIER$\n"
  promote_culture_in_government:0 "政府内で$CULTURE|Y$人を登用する"
  promote_culture_in_government_desc:0 ""
  sell_off_culture_slaves:0 "$CULTURE|Y$の奴隷を売り払う"
@@ -1733,7 +1733,7 @@
  IS_THREAT:0 "脅威"
  GOV_HAS_HAREM:0 "ハレムを持っており、後継者の選択の機会を提供します！"
  militarized_society:0 "国家の軍事化"
- MIL_SOC_CURR_VAL:0 "現在§Y$VAL$%§!、以下の効果を与えます：\n"
+ MIL_SOC_CURR_VAL:0 "現在§Y$VAL$%§!で以下の効果を得ます：\n"
  PRUS_BOOST_TXT:0 "増加"
  INCMILSOCTITLE:0 "国家の軍事化を増加させる"
  INC_M_ALREADY_MAX:0 "軍事化はすでに最高値です！"
@@ -3318,7 +3318,7 @@
  MODIFIER_ADDED_SHORT:1 "「$WHAT|Y$」$TIME$\n"
  MODIFIER_ADDED_SHORT_TIME_DATE:0 "$DATE|Y$まで"
  MODIFIER_ADDED_SHORT_TIME_DURATION:0 "$DURATION|Y$間"
- MODIFIER_ADDED_SHORT_TIME_FOREVER:0 "このゲームが終了するまで"
+ MODIFIER_ADDED_SHORT_TIME_FOREVER:0 "ゲーム終了するまで"
  END_OF_DISASTER_MOD:0 "$NAME$の終息"
  FOREIGN_SPY_DEFENCE:0 "$WHO|Y$での諜報員発見：$VALUE$\n"
  CS_NEW_TC_DESC:0 "この新しい交易都市が形成されています。あなたは現在、その色や旗を変更することができます。"
