--- a/source/localisation/aow_l_english.yml
+++ b/source/localisation/aow_l_english.yml
@@ -61,8 +61,8 @@
  AUTONOMY_NOT_CONTROLLED:0 "支配していない州で、自治率を変更することはできません。"
  AUTONOMY_INC_NO_EFFECT:0 "最大値が§Y$MAX$%§!のため自治率を増加させても効果はありません。"
  AUTONOMY_DEC_NO_EFFECT:0 "最小値が§Y$MAX$%§!のため自治率を低下させても効果はありません。"
- INC_AUTONOMY_TEXT:0 "§Y$WHERE$§!の自治率増加$AMOUNT$は§Y$DATE$§Wまでの間「§Y$WHAT$§W」をもたらし、以下の効果を与えます：\n$EFFECT$\n\n"
- DEC_AUTONOMY_TEXT:0 "§Y$WHERE$§!の自治率減少$AMOUNT$は§Y$DATE$§Wまでの間「§Y$WHAT$§W」をもたらし、以下の効果を与えます：\n$EFFECT$\n\n"
+ INC_AUTONOMY_TEXT:0 "§Y$WHERE$§!の自治率$AMOUNT$増加は§Y$DATE$§Wまでの間「§Y$WHAT$§W」をもたらし、以下の効果を得ます：\n$EFFECT$\n\n"
+ DEC_AUTONOMY_TEXT:0 "§Y$WHERE$§!の自治率$AMOUNT$減少は§Y$DATE$§Wまでの間「§Y$WHAT$§W」をもたらし、以下の効果を得ます：\n$EFFECT$\n\n"
  ENABLE_HRE_LEAGUES:0 "§Yプロテスタント§!及び§Yカトリック§!連盟が有効になります。"
  DISABLE_HRE_LEAGUES:0 "§Yプロテスタント§!及び§Yカトリック§!連盟は無効になります。"
  LOCK_HRE_RELIGION:0 "§Y$RELIGION$§!が、神聖ローマ帝国の公式な信仰となります。"
@@ -472,7 +472,7 @@
  CLIENT_REPUBLIC_CULTURE:0 "$CULTGROUP$共和国"
  NO_TRUCE_COALITION:0 "停戦中は、国家に対する包囲網を形成できません。"
  ADJ_C_SPEED:0 "改革の中心地に隣接している：$VAL$\n"
- C_SP_MISSIONARY_ZEAL:0 "$WHO$の異端宣教師強度：$VAL$\n"
+ C_SP_MISSIONARY_ZEAL:0 "$WHO$の異端布教強度：$VAL$\n"
  C_SP_DEVELOPMENT:0 "$PROVINCE$の開発レベル：$VAL$\n"
  C_SP_HER_TOLERANCE:0 "異端寛容度：$VAL$\n"
  CLIENT_SINCE:0 "§Y$SINCE$§W以来、§Y$OTHER$§Wの下で衛星国である"
