--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -771,7 +771,7 @@
  dlh_textile_industry.tooltip:0 "§Y織物工場§!または§Y綿花§!を産出する§Y大規模農園§!を10州領有する"
  dlh_grand_trunk_road_title:0 "大幹道"
  dlh_grand_trunk_road_desc:0 "大幹道は世界で最も古い通商路の一つであり、西のカーブルから東のベンガルまで及ぶ。この古代の経路全体を支配できたならば、インド北部全域で効率的な輸送網を持つことになるであろう。"
- dlh_grand_trunk_road.tooltip:0 "ラホール、シルヒンド、上ドアーブ、下ドアーブ、プルヴァンチャル、ビハール、ガウル、東ベンガル地域に領有している州全てに対し、このゲームが終了するまで§Y大幹道§!を獲得し、以下の効果が得られます：\n友軍移動速度§G+25%§!"
+ dlh_grand_trunk_road.tooltip:0 "ラホール、シルヒンド、上ドアーブ、下ドアーブ、プルヴァンチャル、ビハール、ガウル、東ベンガル地域の領有州はすべて、ゲーム終了まで§Y大幹道§!を獲得し、以下の効果を得ます：\n友軍移動速度§G+25%§!"
  dlh_conquer_orissa_title:0 "オリッサの征服"
  dlh_conquer_orissa_desc:0 "ジャガンナートの従者たる信仰者たちは、ガルジャートの密林が彼らを我々の支配から保護してくれると信じて逃げた。彼らに我々の猛攻はいかなる障害も凌ぐということを見せつけてやれ！"
  ori_vassals_mission_title:0 "ガルジャートを支配せよ"
@@ -1009,7 +1009,7 @@
  bng_conquer_koch_desc:0 "ベンガルが強力なインド王国に囲まれて本当に生き残りたいなら、拡大せねばならない。我々の北にある小さなコーチ王国は他のどの国家よりも征服するのにふさわしい。"
  bng_garjat_fealty_title:0 "ガルジャートの忠誠の要求"
  bng_garjat_fealty_desc:0 "ガルジャート部族は歴史的に隣接海岸を支配するどの大国にも忠誠を誓ってきた。この土地が我々のものである際は、当然ガルジャートの同様の忠誠を要求すべきことになる。"
- bng_burma.tooltip:0 "ビルマ地域に領有している州は全て§Yビルマでのベンガル支配§!を獲得し、以下の効果を与えられます：\n月毎の自治率の変動：§G-0.05§!"
+ bng_burma.tooltip:0 "ビルマ地域の領有州はすべて、§Yビルマでのベンガル支配§!を獲得し、以下の効果を得ます：\n月毎の自治率の変動：§G-0.05§!"
  mlw_rewakantha_title:0 "リーワーカンタ征服"
  mlw_rewakantha_desc:0 "チャンパーネールの城塞都市は沿岸のライバルの領域、グジャラートの玄関口である。西方への拡大の下準備をするため、自力で城塞を占領せねばならない。"
  mlw_conquer_gujarat_title:0 "グジャラート侵攻"
@@ -1459,8 +1459,8 @@
  lit_conquer_muscovy_title:0 "モスクワとの同君連合"
  lit_conquer_muscovy_desc:0 "彼らの力を抑止する強いノヴゴロドがいてさえも、モスクワは承服できない脅威のままだ。リトアニアの王を彼らの王位へとおかねばならない、あるいは、モスクワを攻撃せねばならない。"
  develop_ukraine_tooltip:0 "以下のいずれか1つを満たす§Yルテニア§!地方に所属する州の内、§Y10§!州を領有する。\n開発度が§Y10§!以上ある\n§Y寺院§!がある\n§Y大聖堂§!がある"
- develop_ukraine_effect_tooltip:0 "§Yルテニア§!地域の領有している州は全て§Y「ルテニアの復興」§!を獲得し、このゲームが終了するまで、以下の効果を与えられます：\n州内開発コスト：§G-5%§!\n州内不穏度：§G-2§!"
- develop_ukraine_effect_tooltip_2:1 "§Yルテニア§!地域の領有している州は全て§Y「ルテニアの復興」§!を獲得し、このゲームが終了するまで、以下の効果を与えられます：\n税収：毎年§G＋0.50§!\n州内不穏度：§G-2§!"
+ develop_ukraine_effect_tooltip:0 "§Yルテニア§!地域の領有州はすべて、ゲーム終了まで§Y「ルテニアの復興」§!を獲得し、以下の効果を得ます：\n州内開発コスト：§G-5%§!\n州内不穏度：§G-2§!"
+ develop_ukraine_effect_tooltip_2:1 "§Yルテニア§!地域の領有州はすべて、ゲーム終了まで§Y「ルテニアの復興」§!を獲得し、以下の効果を得ます：\n税収：毎年§G＋0.50§!\n州内不穏度：§G-2§!"
  plc_election_mission_tooltip:0 "ポーランドで新しい統治者が選出されました。"
  prussian_confederation_mission_pol_title:0 "プロシア連合"
  prussian_confederation_mission_pol_desc:0 "西プロイセンの人々はチュートン騎士団の支配から解放される事を叫ぶ。自由を得るために戦う彼らの支援を行わねばならない。"
@@ -1517,7 +1517,7 @@
  gc_cas_spa_new_spain_desc:0 "恒久的かつ組織的な植民地の副王位を設立することによって、メキシコ湾にまで我が支配を真に合併する時が来た。アウディエンシアは新世界での最高裁判所となり、メキシコの金持ちがスペインまで安全に進めるよう保証する。"
  gc_cas_spa_florida_title:0 "フロリダの要塞化"
  gc_cas_spa_florida_desc:0 "ヌエバ・エスパーニャの北にあるフロリダの湿地帯は金が豊富でないが、将来の植民地の秩序を守る上で不可欠なものだ。その地域へ移住し、要塞化せねばならない。"
- fortified_florida_tooltip:0 "§Yサウスイースト§!もしくは§Y西フロリダ§!地域にて、§Y[Root.GetName]§!かその従属国が領有し、要塞レベルが§Y3§!以上の全州に§Y20§!年間§Y要塞化されたフロリダ§!を獲得し、以下の効果を与えられます：\n州防衛§G＋20%§!"
+ fortified_florida_tooltip:0 "§Yサウスイースト§!もしくは§Y西フロリダ§!地域にて、§Y[Root.GetName]§!またはその従属国が領有し、要塞レベルが§Y3§!以上の全州に§Y20§!年間§Y要塞化されたフロリダ§!を獲得し、以下の効果を得ます：\n州防衛§G＋20%§!"
  cas_spa_florida_forts.tooltip:0 "自国か従属国が§Yサウスイースト§!あるいは§Y西フロリダ§!地域において、§Y3§!レベル以上の要塞がある州を§Y3§!州以上領有する。"
  gc_cas_spa_california_title:0 "カリフォルニアの植民地化"
  gc_cas_spa_california_desc:0 "カリフォルニアへの進出拡大は、ヌエバ・エスパーニャの国境を自然と伸ばすこととなる。根も葉もないが、この地域には前人未踏の金鉱床があると噂されており、もし本当に存在すれば、確保せねばならない地域である。"
@@ -1681,7 +1681,7 @@
  gc_por_english_alliance_desc:0 "イングランドとポルトガル間の同盟は数世代に渡って続いており、来たるべき世代のためにも現状を継続せねばならない。"
  gc_por_caribbean_title:0 "カリブ海の植民地化"
  gc_por_caribbean_desc:0 "カリブ諸島は、新しい植民地における一番の場所だ。ポルトガルの支配下にできるだけ多くの人が入るよう努めねばならない。"
- portuguese_carib_tooltip:0 "§Yカリブ海植民地域§!の植民地国家は§Y20§!年間「§Yカリブ植民地の繁栄§!」を獲得し、以下の効果が得られます：\n交易効率：§G+10%§!"
+ portuguese_carib_tooltip:0 "§Yカリブ海植民地域§!の植民地国家は§Y20§!年間「§Yカリブ植民地の繁栄§!」を獲得し、以下の効果を得ます：\n交易効率：§G+10%§!"
  gc_por_malabar_title:0 "ポルトガル領マラバール"
  gc_por_malabar_desc:0 "その地域固有であり、豊富な香辛料を生産し販売する為、マラバール海岸沿いの一連のフェイトリアを設けねばならない。土地の一部を購入することができるかもしれないが、最終的にはインドの公爵との合意に達しえない場所を力ずくで奪う必要があるかもしれない。"
  gc_por_surat_title:0 "スーラトの支配"
@@ -1705,7 +1705,7 @@
  gc_por_japanese_trade_desc:0 "すべての見知らぬ人が不審に思えるが、日本の封建的支配者は、どんな商人にも交易の権利や日本の港への上陸さえも中々許してくれない。彼らの疑念を克服する方法を見つけ、この独占的な市場の足場を持つ唯一のヨーロッパ勢力とならなければならない。"
  gc_por_triangle_trade_title:0 "三角貿易"
  gc_por_triangle_trade_desc:0 "アフリカの奴隷は、新世界の大農園で働くために送られる。この奴隷労働の製品は、その後ヨーロッパに送り返され、法外な利益率で売却される。これが大西洋の三角貿易であり、我々はこれを支配しなければならない。"
- por_triangle_trade_mission_tooltip:0 "§Y奴隷§!を産出する§Yアフリカ§!大陸の領有する全州で§Y20§!年間「§Y三角貿易§!」を獲得し、以下の効果を与えられます：\n交易品生産量：§G+10%§!"
+ por_triangle_trade_mission_tooltip:0 "§Y奴隷§!を産出する§Yアフリカ§!大陸の領有州はすべて、§Y20§!年間「§Y三角貿易§!」を獲得し、以下の効果を得ます：\n交易品生産量：§G+10%§!"
  por_indian_investment_tooltip:1 "§Yインド§!亜大陸で領有するステートに、交易会社投資が1以上ある"
  gc_portugal_discovers_india_title:0 "インドへ前進"
  gc_portugal_discovers_india_desc:0 "我々はプレスター・ジョンの王国の兆候を見つけられていないが、香辛料貿易を手にしてムーア人に打撃を与えることができる。我々は、我々がキリスト教世界を守るために少しでも何かできるように、インドを発見する必要がある。"
